force-app/main/default/objects/Dummy27__c/Dummy27__c.object-meta.xml
<CustomObject>
    <label>Dummy27</label>
    <nameField>
        <label>Dummy27 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy27</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>