force-app/main/default/objects/Dummy27__c/fields/FooBar066__c.field-meta.xml
<CustomField>
    <fullName>FooBar066__c</fullName>
    <label>FooBar066</label>
    <length>255</length>
    <type>Text</type>
</CustomField>