force-app/main/default/objects/Dummy27__c/fields/FooBar080__c.field-meta.xml
<CustomField>
    <fullName>FooBar080__c</fullName>
    <label>FooBar080</label>
    <length>255</length>
    <type>Text</type>
</CustomField>