force-app/main/default/objects/Dummy27__c/fields/FooBar125__c.field-meta.xml
<CustomField>
    <fullName>FooBar125__c</fullName>
    <label>FooBar125</label>
    <length>255</length>
    <type>Text</type>
</CustomField>